# codejury

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
capabilities/: authentication.yaml  authorization.yaml  business_logic.yaml  crypto.yaml  data_protection.yaml  dependency_config.yaml  error_logging.yaml  secrets.yaml  session.yaml
codejury/: __init__.py  assembly.py  cli.py  evaluation.py  reporting.py  resources.py
codejury/agents/: __init__.py  base.py  debate.py  mock.py  parsing.py  verifier.py
codejury/data/capabilities/: input_validation.yaml  output_encoding.yaml
codejury/data/golden/: sqli_fstring_query.yaml  sqli_parameterized_query.yaml
codejury/domain/: __init__.py  artifact.py  capability.py  context.py  observation.py  result.py
codejury/infra/: __init__.py
codejury/infrastructure/: __init__.py  json_parse.py
codejury/orchestrators/: __init__.py  base.py  debate.py  mock.py  pipeline.py  reflexion.py  single.py
codejury/providers/: __init__.py  anthropic.py  base.py  litellm.py  mock.py  openai.py  openai_format.py  retry.py
codejury/sources/: __init__.py  base.py  chunker.py  diff.py  function.py  mock.py  repo.py
codejury/tasks/: __init__.py  base.py  registry.py
golden/: authn_bcrypt_password.yaml  authn_sha256_password.yaml
tasks/: audit_diff_debate.yaml  quick_scan_single.yaml
tests/: test_anthropic_provider.py  test_assembly.py  test_audit_pipeline.py  test_capability.py  test_cli_audit.py  test_context.py  test_debate_agents.py  test_debate_orchestrator.py  test_diff_source.py  test_evaluation.py  test_function_source.py  test_json_parse.py  test_litellm_provider.py  test_openai_provider.py  test_orchestrator.py  test_pipeline_orchestrator.py  test_reflexion_orchestrator.py  test_repo_source.py  test_reporting.py  test_retry_provider.py  test_tasks.py  test_verifier.py
