[project]
name = "codejury"
version = "0.0.0"
description = "General-purpose Application Security AI audit framework -- five-layer architecture, capabilities as first-class data"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
litellm = ["litellm>=1.0"]
dev = ["pytest>=8.0"]

[project.scripts]
codejury = "codejury.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["codejury*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
