[project]
name = "codejury"
version = "0.1.0"
description = "General-purpose Application Security AI audit framework -- five-layer architecture, capabilities as first-class data"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "4234288" }]
keywords = ["security", "appsec", "static analysis", "llm", "owasp", "asvs", "code review"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
litellm = ["litellm>=1.0"]
dev = ["pytest>=8.0"]

[project.scripts]
codejury = "codejury.cli:main"

[project.urls]
Homepage = "https://github.com/4234288/codejury"
Repository = "https://github.com/4234288/codejury"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["codejury*"]

[tool.setuptools.package-data]
codejury = ["data/**/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
